syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EraFlipperDataTypeInfo.proto";

message EraFlipperDataChangeScNotify {
	EraFlipperDataTypeInfo data = 12;
	uint32 floor_id = 1;
}


