syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

message EraFlipperDataType {
	uint32 state = 8;
	uint32 ACNPBBNLMIE = 11;
}